# DifferentialGeometry2

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
exe/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt  comparison.cpp  comparison.hpp  derivative.cpp  derivative.hpp  expression.cpp  expression.hpp  printing.cpp  printing.hpp
lib/utils/: strings.cpp  strings.hpp
travis-scripts/: build.sh
unit_tests/: CMakeLists.txt  test_derivative.cpp  test_printing.cpp
